# workshop_qualidade

./: README.md  anotações.txt  my_duckdb.db  pyproject.toml
app/: etl.py  etl_infer_schema.py  func.py  schema.py  schema_email.py
docs/: index.md
exemplo/: exemplo01.py
tests/: test_funcao_ola_mundo.py
